--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,6 +1,42 @@
 @use './mixins' as *;
 
 #about{
-    min-height:100%;
-    background-color: red;
+    overflow: hidden;
+    min-height:calc(100% - 80px);
+    padding: 40px;
+    // background-color: red;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    place-content: center;
+
+    article{
+        padding: 20px;
+        &:first-child{
+            p{
+                padding: 0;
+                margin: 0;
+                font-size: 0.92em;
+
+                span{
+                    color:var(--main-accent);
+                    font-weight: 700;
+                }
+            }
+        }
+
+        &:last-child{
+            h3{
+                padding: 0;
+                margin: 0;
+                color:rgb(92, 92, 92);
+            }
+            ul{
+                padding: 0;
+                padding-left: 15px;
+                li{
+                    color:rgb(92, 92, 92);
+                }
+            }
+        }
+    }
 }
