--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -7,7 +7,7 @@
     padding: 40px 60px;
     min-height: calc(100% - 80px);
     overflow: hidden;
-    position: relative;
+    // position: relative;
     // background-color: red;
   }
   
@@ -79,9 +79,21 @@ overflow: hidden;
     width: 800px;
     position: absolute;
     z-index: -1;
-    opacity: 0.4;
+    
+   
+
+    &:first-child{
+        opacity: 0.3;
     left: 200px;
     top:100px;
     transform: rotate(30deg);
+    }
+
+    &:nth-child(2){
+        opacity: 0.3;
+    left: -200px;
+    top:600px;
+    transform: rotate(-30deg);
+    }
    }
   }
