--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,6 @@
   padding: 40px 60px;
   min-height: calc(100% - 80px);
   overflow: hidden;
-  position: relative;
 }
 
 #hero-greetings {
@@ -65,15 +64,51 @@
   width: 800px;
   position: absolute;
   z-index: -1;
-  opacity: 0.4;
+}
+#hero-image img:first-child {
+  opacity: 0.3;
   left: 200px;
   top: 100px;
   transform: rotate(30deg);
 }
+#hero-image img:nth-child(2) {
+  opacity: 0.3;
+  left: -200px;
+  top: 600px;
+  transform: rotate(-30deg);
+}
 
 #about {
-  min-height: 100%;
-  background-color: red;
+  overflow: hidden;
+  min-height: calc(100% - 80px);
+  padding: 40px;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  place-content: center;
+}
+#about article {
+  padding: 20px;
+}
+#about article:first-child p {
+  padding: 0;
+  margin: 0;
+  font-size: 0.92em;
+}
+#about article:first-child p span {
+  color: var(--main-accent);
+  font-weight: 700;
+}
+#about article:last-child h3 {
+  padding: 0;
+  margin: 0;
+  color: rgb(92, 92, 92);
+}
+#about article:last-child ul {
+  padding: 0;
+  padding-left: 15px;
+}
+#about article:last-child ul li {
+  color: rgb(92, 92, 92);
 }
 
 :root {
@@ -98,20 +133,48 @@ canvas {
   z-index: 0;
 }
 
-button {
+#day-night {
+  margin: 20px;
   position: relative;
-  background-color: white;
+  width: 80px;
+  height: 35px;
+  border: solid white 2px;
+  border-radius: 500px;
   z-index: 2;
+  background-color: rgba(104, 230, 253, 0.8);
+  transition: all 0.5s;
+  cursor: pointer;
+}
+#day-night div {
+  height: 85%;
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  transform: translateY(-50%);
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255);
+  display: grid;
+  place-content: center;
+  color: rgb(253, 217, 41);
+  transition: all 0.5s;
+}
+#day-night.active {
+  background-color: rgb(7, 3, 64);
+}
+#day-night.active div {
+  color: grey;
+  transform: translate(160%, -50%);
 }
 
 main {
   cursor: default;
   position: relative;
-  width: 767px;
+  width: 60%;
   overflow-x: hidden;
   overflow-y: auto;
   /* height:450px; */
-  aspect-ratio: 1.71/1;
+  aspect-ratio: 1.72/1;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -60%);
@@ -124,22 +187,4 @@ main {
   justify-content: flex-start;
   align-items: stretch;
   scrollbar-width: thin;
-}
-
-@media screen and (max-width: 900px) {
-  main {
-    width: 83%;
-  }
-}
-@media screen and (max-width: 800px) {
-  main {
-    width: 80%;
-    top: 49%;
-  }
-}
-@media screen and (max-width: 600px) {
-  main {
-    width: 480px;
-    top: 49%;
-  }
 }/*# sourceMappingURL=style.css.map */
