--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -1,17 +1,25 @@
-@use './mixins';
+@use './mixins' as *;
 
 #hero{
+    scroll-snap-align: center;
     display:grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr;
+    place-content: center;
+    // grid-template-columns: 2fr 1fr;
+    // grid-template-rows: 1fr;
     padding: 40px 60px;
     min-height: calc(100% - 80px);
     overflow: hidden;
+
+    // @media screen and (max-width:800px) {
+    //    grid-template-columns: 1fr;
+    // }
     // position: relative;
     // background-color: red;
   }
   
   #hero-greetings{
+    margin-bottom: 50px;
+    // background-color: red;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -21,12 +29,35 @@
     h1{
         margin:0;
         padding: 0;
-        font-size: 2.7em;
+        font-size: 2.2em;
         line-height: 45px;
         font-weight: 800;
+        text-align: center;
+        position: relative;
+
+
+        @media screen and (max-width:820px) {
+            font-size: 1.6em;
+            line-height: 30px;
+        }
 
         span{
-            color:var(--main-accent) !important;
+            position: absolute;
+            font-size: 1em;
+            white-space: nowrap;
+            opacity: 0.2;
+            left:50%;
+          transition: all 0.1s;
+            transform: translate(-50%,-50%);
+
+            &:first-child{
+                top:30%;
+            }
+
+            &:last-child{
+                opacity: 0.1;
+                top:10%;
+            }
 
         }
     }
@@ -36,23 +67,32 @@
         padding: 0;
         color:rgb(54, 54, 54);
         font-size: 1em;
+        text-align: center;
+        width: 100%;
 
-        &#list-header{
-          margin-top: 20px !important;
+        @media screen and (max-width:800px) {
+            font-size: 0.8em;
         }
+        
     }
 
     ul{
-        display: flex;
+
+        // width: 100%;
+        @include flex(row,center,center);
         gap:20px;
         list-style: none;
         padding: 0;
         margin: 0;
-        margin-top: 10px;
+        position: absolute;
+        bottom:40px;
+        left:50%;
+        transform: translateX(-50%);
+        // margin-top: 10px;
 
         li{
             color: var(--main-accent);
-            width: 40px;
+            width: 35px;
             aspect-ratio: 1/1;
             border-radius: 50%;
             display: grid;
@@ -60,6 +100,24 @@
             border: solid var(--main-accent) 2px;
             transition: all 0.2s;
             cursor: pointer;
+            overflow: hidden;
+            position: relative;
+
+            a{
+                padding: 20px;
+                width: 100%;
+                height: 100%;
+                color:inherit;
+
+                i{
+                    font-size: 0.8em;
+                }
+            }
+
+            @media screen and (max-width:800px) {
+                width: 30px;
+                font-size: 0.8em;
+            }
 
             &:hover{
                 background-color: var(--main-accent);
@@ -79,21 +137,27 @@ overflow: hidden;
     width: 800px;
     position: absolute;
     z-index: -1;
+    opacity: 0.2;
     
    
 
     &:first-child{
-        opacity: 0.3;
     left: 200px;
     top:100px;
     transform: rotate(30deg);
     }
 
     &:nth-child(2){
-        opacity: 0.3;
+
     left: -200px;
     top:600px;
     transform: rotate(-30deg);
+    }
+
+    &:nth-child(3){
+        left: 200px;
+        top:1100px;
+        transform: rotate(-30deg);
     }
    }
   }
