--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,10 @@
 @use './mixins' as *;
 @use './hero';
 @use './about';
+@use './skills';
+@use './projects';
+@use './footer';
+
 
 :root{
     --main-accent:rgb(141, 22, 135);
@@ -12,8 +16,10 @@
     padding: 0;
     overflow: hidden;
     font-family: 'Nunito Sans', sans-serif;
+    position: relative;
     height: 100vh;
     width: 100vw;
+    @include flex(row,center,center);
   }
   
 
@@ -27,15 +33,17 @@
     z-index: 0;
   }
   
-//   button{
-//     position: relative;
-//     background-color: white;
-//     z-index: 2;
-//   }
+  button{
+    position: absolute;
+    left:20px;
+    top:20px;
+    // background-color: white;
+    z-index: 2;
+  }
 
 #day-night{
     margin: 20px;
-    position: relative;
+    // position: absolute;
     width:80px;
     height:35px;
     border: solid white 2px;
@@ -70,18 +78,17 @@
 }
   
   main{
+    scroll-snap-type: y mandatory;
     cursor: default;
     position: relative;
-    // min-width: 767px;
-    width:60%;
+
+    height:76%;
+
     overflow-x:hidden ;
     overflow-y: auto;
-    /* height:450px; */
+
     aspect-ratio: 1.72/1;
-    // background-color: rgba(0, 0, 0, 0.3);
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-60%);
+
     z-index: 2;
    opacity: 0;
    visibility: hidden;
@@ -89,32 +96,45 @@
 @include flex(column,flex-start,stretch);
 
 scrollbar-width: thin;
+
+&::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  &::-webkit-scrollbar-track-piece {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgb(126, 125, 125);
+  }
   
   }
   
-//   @media screen and (max-width:890px){
-//     main{
-//         top:49.5%;
-//       width: 82.5%;
-//     }
-//   }
+  @media screen and (max-width:900px){
+    main{
+        // aspect-ratio: auto;
+       height: 100%;
+      width: 100%;
+    }
+  }
 //   @media screen and (max-width:850px){
 //     main{
 //       width: 81%;
-//       top:49%
+  
 //     }
 //   }
 //   @media screen and (max-width:820px){
 //     main{
-//       width: 78%;
-//       top:49%
+//       width: 77%;
+      
 //     }
 //   }
   
 //   @media screen and (max-width:600px){
 //     main{
 //       width:470px;
-//       top:49%
 //     }
 //   }
   
