--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -5,31 +5,38 @@
     overflow: hidden;
     min-height:calc(100% - 80px);
     padding: 40px;
-    // background-color: red;
     display: grid;
-    // grid-template-columns: 2fr 3fr;
-
-    @media screen and (max-width:820px) {
-        grid-template-columns: 1fr 3fr;
-      }
     place-content: center;
 
     article{
         padding: 10px;
+        @media screen and (max-width:620px) {
+           padding: 0;
+          }
         &:last-child{
+
+            @media screen and (max-width:820px) {
+                margin-top: 50px;
+               }
             p{
+
                 padding: 0;
                 margin: 0;
                 font-size: 0.8em;
                 color:rgb(51, 51, 51);
 
-                
-        @media screen and (max-width:820px) {
+                      @media screen and (max-width:820px) {
           font-size: 0.7em;
         }
 
+                
+  
+
         @media screen and (max-width:620px) {
-            font-size: 0.6em;
+            text-align: center;
+          }
+          @media screen and (max-width:410px) {
+            font-size: 0.5em;
           }
 
                 span{
@@ -40,18 +47,12 @@
         }
 
         &:first-child{
-            h3{
+            h1{
                 padding: 0;
                 margin: 0;
                 position: relative;
+                font-size: 1.3em;
 
-                @media screen and (max-width:820px) {
-                    font-size: 0.8em;
-                  }
-
-                  @media screen and (max-width:620px) {
-                    font-size: 0.7em;
-                  }
 
                   span{
                     opacity: 0.2;
@@ -70,6 +71,13 @@
                 margin-top: 40px;
                 display: grid;
                 grid-template-columns: repeat(6,1fr);
+
+                @media screen and (max-width:820px) {
+                    grid-template-columns: repeat(3,1fr);
+                   }
+                   @media screen and (max-width:520px) {
+                    grid-template-columns: repeat(2,1fr);
+                   }
                 gap:15px;
                 padding: 0;
                 // padding-left: 15px;
@@ -77,7 +85,7 @@
                 li{
                     border-radius: 5px;
                     color:rgb(92, 92, 92);
-                    box-shadow: 2px 2px 10px rgb(174, 174, 174);
+                    box-shadow: 2px 2px 5px rgb(174, 174, 174);
                     display: grid;
                     place-content: center;
                     font-size: 0.8em;
