--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -36,15 +36,14 @@
         position: relative;
 
 
-        @media screen and (max-width:820px) {
-            font-size: 1.6em;
-            line-height: 30px;
-        }
+        // @media screen and (max-width:820px) {
+        //     font-size: 1.6em;
+        //     line-height: 30px;
+        // }
 
         span{
+            width: 100%;
             position: absolute;
-            font-size: 1em;
-            white-space: nowrap;
             opacity: 0.2;
             left:50%;
           transition: all 0.1s;
