--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -3,7 +3,7 @@
 #skills{
     scroll-snap-align: center;
     padding: 40px;
-    min-height: calc(100% - 80px);
+    // min-height: calc(100% - 80px);
     display: grid;
     grid-template-rows: 1fr 8fr;
     grid-gap:20px;
@@ -22,7 +22,7 @@
             opacity: 0.2;
             position: absolute;
             left:50%;
-            top:20%;
+            top:25%;
             transform: translate(-50%,-50%);
 
             &:last-child{
@@ -37,6 +37,11 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: repeat(5,1fr);
         place-content: center;
+
+        @media screen and (max-width:450px){
+          grid-template-columns: 1fr;
+          gap:20px;
+        }
 
         div{
             @include flex(column,center,center);
@@ -53,6 +58,10 @@
                 margin: 0;
                 padding: 0;
                 font-size: 0.9em;
+
+                @media screen and (max-width:700px){
+                  font-size: 0.6em;
+                }
             }
 
             progress {
@@ -136,6 +145,14 @@
                 margin-top: -10px;
                 font-size: 0.7em;
                 color: rgb(85, 84, 84);
+
+                @media screen and (max-width:700px){
+                  font-size: 0.6em;
+                  margin-right: 20px;
+                }
+                @media screen and (max-width:450px){
+                  margin-right: 40px;
+                }
               }
         }
     }
