--- a/styles/style.css
+++ b/styles/style.css
@@ -24,16 +24,9 @@
   text-align: center;
   position: relative;
 }
-@media screen and (max-width: 820px) {
-  #hero-greetings h1 {
-    font-size: 1.6em;
-    line-height: 30px;
-  }
-}
 #hero-greetings h1 span {
+  width: 100%;
   position: absolute;
-  font-size: 1em;
-  white-space: nowrap;
   opacity: 0.2;
   left: 50%;
   transition: all 0.1s;
@@ -139,13 +132,18 @@
   display: grid;
   place-content: center;
 }
-@media screen and (max-width: 820px) {
-  #about {
-    grid-template-columns: 1fr 3fr;
-  }
-}
 #about article {
   padding: 10px;
+}
+@media screen and (max-width: 620px) {
+  #about article {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 820px) {
+  #about article:last-child {
+    margin-top: 50px;
+  }
 }
 #about article:last-child p {
   padding: 0;
@@ -160,36 +158,32 @@
 }
 @media screen and (max-width: 620px) {
   #about article:last-child p {
-    font-size: 0.6em;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 410px) {
+  #about article:last-child p {
+    font-size: 0.5em;
   }
 }
 #about article:last-child p span {
   color: var(--main-accent);
   font-weight: 700;
 }
-#about article:first-child h3 {
+#about article:first-child h1 {
   padding: 0;
   margin: 0;
   position: relative;
+  font-size: 1.3em;
 }
-@media screen and (max-width: 820px) {
-  #about article:first-child h3 {
-    font-size: 0.8em;
-  }
-}
-@media screen and (max-width: 620px) {
-  #about article:first-child h3 {
-    font-size: 0.7em;
-  }
-}
-#about article:first-child h3 span {
+#about article:first-child h1 span {
   opacity: 0.2;
   position: absolute;
   left: 0;
   top: 30%;
   transform: translateY(-50%);
 }
-#about article:first-child h3 span:last-child {
+#about article:first-child h1 span:last-child {
   opacity: 0.1;
   top: 10%;
 }
@@ -201,10 +195,20 @@
   padding: 0;
   list-style: none;
 }
+@media screen and (max-width: 820px) {
+  #about article:first-child ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 520px) {
+  #about article:first-child ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 #about article:first-child ul li {
   border-radius: 5px;
   color: rgb(92, 92, 92);
-  box-shadow: 2px 2px 10px rgb(174, 174, 174);
+  box-shadow: 2px 2px 5px rgb(174, 174, 174);
   display: grid;
   place-content: center;
   font-size: 0.8em;
@@ -224,7 +228,6 @@
 #skills {
   scroll-snap-align: center;
   padding: 40px;
-  min-height: calc(100% - 80px);
   display: grid;
   grid-template-rows: 1fr 8fr;
   grid-gap: 20px;
@@ -240,7 +243,7 @@
   opacity: 0.2;
   position: absolute;
   left: 50%;
-  top: 20%;
+  top: 25%;
   transform: translate(-50%, -50%);
 }
 #skills h1 span:last-child {
@@ -252,6 +255,12 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(5, 1fr);
   place-content: center;
+}
+@media screen and (max-width: 450px) {
+  #skills article {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
 }
 #skills article div {
   display: flex;
@@ -268,6 +277,11 @@
   margin: 0;
   padding: 0;
   font-size: 0.9em;
+}
+@media screen and (max-width: 700px) {
+  #skills article div h3 {
+    font-size: 0.6em;
+  }
 }
 #skills article div progress {
   border-radius: 500px;
@@ -299,14 +313,29 @@
   font-size: 0.7em;
   color: rgb(85, 84, 84);
 }
+@media screen and (max-width: 700px) {
+  #skills article div span {
+    font-size: 0.6em;
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width: 450px) {
+  #skills article div span {
+    margin-right: 40px;
+  }
+}
 
 #projects {
-  min-height: calc(100% - 80px);
   scroll-snap-align: center;
   padding: 40px;
   display: grid;
   grid-template-rows: 1fr 8fr;
   grid-gap: 20px;
+}
+@media screen and (max-width: 600px) {
+  #projects {
+    padding: 20px;
+  }
 }
 #projects h1 {
   margin: 0;
@@ -320,7 +349,7 @@
   opacity: 0.2;
   position: absolute;
   left: 50%;
-  top: 20%;
+  top: 25%;
   transform: translate(-50%, -50%);
 }
 #projects h1 span:last-child {
@@ -330,11 +359,16 @@
 #projects article {
   display: grid;
   grid-template-columns: repeat(20, 1fr);
-  grid-template-rows: 1fr 1fr;
   gap: 15px;
 }
+@media screen and (max-width: 800px) {
+  #projects article {
+    grid-template-columns: 1fr;
+  }
+}
 #projects article div {
-  box-shadow: 3px 3px 10px rgb(177, 176, 176);
+  min-height: 100px;
+  box-shadow: 2px 2px 5px rgb(177, 176, 176);
   border-radius: 5px;
   padding: 15px;
   position: relative;
@@ -383,24 +417,40 @@
   z-index: 20;
   position: relative;
   font-size: 0.45em;
+  padding-bottom: 10px;
   color: rgb(32, 32, 32);
   transition: all 0.3s;
 }
-#projects article div:nth-child(1) {
-  grid-column: span 8;
+@media screen and (max-width: 600px) {
+  #projects article div p {
+    font-size: 0.4em;
+  }
 }
-#projects article div:nth-child(2) {
-  grid-column: span 7;
+@media screen and (min-width: 800px) {
+  #projects article div:nth-child(1) {
+    grid-column: span 8;
+  }
 }
-#projects article div:nth-child(3) {
-  grid-column: span 5;
-  grid-row: span 2;
+@media screen and (min-width: 800px) {
+  #projects article div:nth-child(2) {
+    grid-column: span 7;
+  }
 }
-#projects article div:nth-child(4) {
-  grid-column: span 7;
+@media screen and (min-width: 800px) {
+  #projects article div:nth-child(3) {
+    grid-column: span 5;
+    grid-row: span 2;
+  }
 }
-#projects article div:nth-child(5) {
-  grid-column: span 8;
+@media screen and (min-width: 800px) {
+  #projects article div:nth-child(4) {
+    grid-column: span 7;
+  }
+}
+@media screen and (min-width: 800px) {
+  #projects article div:nth-child(5) {
+    grid-column: span 8;
+  }
 }
 #projects article div a {
   text-decoration: none;
@@ -439,8 +489,24 @@
   gap: 20px;
   border-top: solid grey 1px;
 }
+@media screen and (max-width: 800px) {
+  #footer footer {
+    grid-template-columns: 3fr 2fr;
+  }
+}
+@media screen and (max-width: 600px) {
+  #footer footer {
+    grid-template-columns: 1fr;
+    gap: 5px;
+  }
+}
 #footer footer div {
   padding: 15px;
+}
+@media screen and (max-width: 600px) {
+  #footer footer div {
+    padding: 5px;
+  }
 }
 #footer footer div h3 {
   font-size: 0.9em;
@@ -503,6 +569,7 @@ html, body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  scroll-behavior: smooth;
 }
 
 canvas {
@@ -521,13 +588,33 @@ button {
   z-index: 2;
 }
 
+header {
+  width: 650px;
+  height: 550px;
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+}
+
+#exit-website {
+  visibility: hidden;
+  z-index: 100;
+  top: 70px;
+  width: 80px;
+  height: 35px;
+  border-radius: 500px;
+  border: none;
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+
 #day-night {
-  margin: 20px;
   width: 80px;
   height: 35px;
   border: solid white 2px;
   border-radius: 500px;
-  z-index: 2;
+  z-index: 100;
   background-color: rgba(104, 230, 253, 0.8);
   transition: all 0.5s;
   cursor: pointer;
@@ -555,7 +642,6 @@ button {
 }
 
 main {
-  scroll-snap-type: y mandatory;
   cursor: default;
   position: relative;
   height: 76%;
@@ -564,13 +650,18 @@ main {
   aspect-ratio: 1.72/1;
   z-index: 2;
   opacity: 0;
-  visibility: hidden;
   transition: opacity 0.4s;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
+  display: none;
   scrollbar-width: thin;
+}
+@media screen and (min-width: 800px) {
+  main {
+    scroll-snap-type: y mandatory;
+  }
 }
 main::-webkit-scrollbar {
   width: 7px;
