--- a/styles/style.css
+++ b/styles/style.css
@@ -679,4 +679,48 @@ main::-webkit-scrollbar-thumb {
     height: 100%;
     width: 100%;
   }
+}
+#loader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgb(0, 0, 0);
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-content: center;
+  transition: opacity 1s;
+  z-index: 200;
+}
+#loader h1 {
+  text-align: center;
+  color: white;
+  font-size: 2em;
+  font-weight: 900;
+}
+#loader progress {
+  border-radius: 500px;
+  width: 500px;
+  height: 7px;
+  border: none;
+  background-color: rgb(0, 0, 0);
+}
+#loader progress::-webkit-progress-bar {
+  background-color: rgb(0, 0, 0);
+  border-radius: 500px;
+}
+#loader progress::-webkit-progress-value {
+  border-radius: 500px;
+  background-color: var(--main-accent);
+  opacity: 0.8;
+}
+#loader progress::-moz-progress-bar {
+  background-color: var(--main-accent);
+  opacity: 0.8;
+}
+#loader div {
+  margin-top: 10px;
+  padding-left: 0%;
+  margin-left: -20px;
+  color: rgb(155, 155, 155);
 }/*# sourceMappingURL=style.css.map */
