--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -1,162 +1,156 @@
-@use './mixins' as *;
+@use "./mixins" as *;
 
-#hero{
-    scroll-snap-align: center;
-    display:grid;
-    place-content: center;
-    // grid-template-columns: 2fr 1fr;
-    // grid-template-rows: 1fr;
-    padding: 40px 60px;
-    min-height: calc(100% - 80px);
-    overflow: hidden;
+@keyframes bounce {
+  0% {
+    transform: translateY(0px);
+  }
+  10% {
+    transform: translateY(-8px);
+  }
+  20% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 
-    // @media screen and (max-width:800px) {
-    //    grid-template-columns: 1fr;
+#hero {
+  scroll-snap-align: center;
+  display: grid;
+  place-content: center;
+  padding: 40px 60px;
+  min-height: calc(100% - 80px);
+  overflow: hidden;
+}
+
+#hero-greetings {
+  margin-bottom: 50px;
+  // background-color: red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 5px;
+
+  h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 2.2em;
+    line-height: 45px;
+    font-weight: 800;
+    text-align: center;
+    position: relative;
+
+    // @media screen and (max-width:820px) {
+    //     font-size: 1.6em;
+    //     line-height: 30px;
     // }
-    // position: relative;
-    // background-color: red;
-  }
-  
-  #hero-greetings{
-    margin-bottom: 50px;
-    // background-color: red;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap:5px;
 
-    h1{
-        margin:0;
-        padding: 0;
-        font-size: 2.2em;
-        line-height: 45px;
-        font-weight: 800;
-        text-align: center;
-        position: relative;
+    span {
+      width: 100%;
+      position: absolute;
+      opacity: 0.2;
+      left: 50%;
+      transition: all 0.1s;
+      transform: translate(-50%, -50%);
 
+      &:first-child {
+        top: 30%;
+      }
 
-        // @media screen and (max-width:820px) {
-        //     font-size: 1.6em;
-        //     line-height: 30px;
-        // }
-
-        span{
-            width: 100%;
-            position: absolute;
-            opacity: 0.2;
-            left:50%;
-          transition: all 0.1s;
-            transform: translate(-50%,-50%);
-
-            &:first-child{
-                top:30%;
-            }
-
-            &:last-child{
-                opacity: 0.1;
-                top:10%;
-            }
-
-        }
-    }
-
-    h3{
-        margin:0;
-        padding: 0;
-        color:rgb(54, 54, 54);
-        font-size: 1em;
-        text-align: center;
-        width: 100%;
-
-        @media screen and (max-width:800px) {
-            font-size: 0.8em;
-        }
-        
-    }
-
-    ul{
-
-        // width: 100%;
-        @include flex(row,center,center);
-        gap:20px;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        position: absolute;
-        bottom:40px;
-        left:50%;
-        transform: translateX(-50%);
-        // margin-top: 10px;
-
-        li{
-            color: var(--main-accent);
-            width: 35px;
-            aspect-ratio: 1/1;
-            border-radius: 50%;
-            display: grid;
-            place-content: center;
-            border: solid var(--main-accent) 2px;
-            transition: all 0.2s;
-            cursor: pointer;
-            overflow: hidden;
-            position: relative;
-
-            a{
-                padding: 20px;
-                width: 100%;
-                height: 100%;
-                color:inherit;
-
-                i{
-                    font-size: 0.8em;
-                }
-            }
-
-            @media screen and (max-width:800px) {
-                width: 30px;
-                font-size: 0.8em;
-            }
-
-            &:hover{
-                background-color: var(--main-accent);
-                color:white;
-
-            }
-        }
+      &:last-child {
+        opacity: 0.1;
+        top: 10%;
+      }
     }
   }
 
+  h3 {
+    margin: 0;
+    padding: 0;
+    color: rgb(54, 54, 54);
+    font-size: 1em;
+    text-align: center;
+    width: 100%;
 
+    @media screen and (max-width: 800px) {
+      font-size: 0.8em;
+    }
+  }
 
-
-  #hero-image{
-overflow: hidden;
-   img{
-    width: 800px;
+  ul {
+    // width: 100%;
+    @include flex(row, center, center);
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
     position: absolute;
-    z-index: -1;
-    opacity: 0.2;
-    
-   
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    // margin-top: 10px;
 
-    &:first-child{
-    left: 200px;
-    top:100px;
-    transform: rotate(30deg);
+    li {
+      color: var(--main-accent);
+      width: 35px;
+      aspect-ratio: 1/1;
+      border-radius: 50%;
+      display: grid;
+      place-content: center;
+      border: solid var(--main-accent) 2px;
+      transition: all 0.2s;
+      cursor: pointer;
+      overflow: hidden;
+      position: relative;
+
+      a {
+        padding: 20px;
+        width: 100%;
+        height: 100%;
+        color: inherit;
+
+        i {
+          font-size: 0.8em;
+        }
+      }
+
+      @media screen and (max-width: 800px) {
+        width: 30px;
+        font-size: 0.8em;
+      }
+
+      &:hover {
+        background-color: var(--main-accent);
+        color: white;
+      }
     }
-
-    &:nth-child(2){
-
-    left: -200px;
-    top:600px;
-    transform: rotate(-30deg);
-    }
-
-    &:nth-child(3){
-        left: 200px;
-        top:1100px;
-        transform: rotate(-30deg);
-    }
-   }
   }
+}
+
+.scroll-me-tag {
+    font-size: 0.9em;
+  font-weight: 700;
+  position: absolute;
+  bottom: 50px;
+  right: 40px;
+
+  @media screen and (max-width:600px) {
+    bottom:120px;
+    right: 50%;
+    transform: translateX(50%);
+  }
+
+  div {
+    display: inline-block;
+
+    animation: bounce 2s infinite;
+
+        @for $i from 1 through 8{
+        &:nth-child(#{$i}){
+            animation-delay: $i * 0.08s;
+        }
+    }
+  }
+}
