--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,17 @@
+@keyframes bounce {
+  0% {
+    transform: translateY(0px);
+  }
+  10% {
+    transform: translateY(-8px);
+  }
+  20% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 #hero {
   scroll-snap-align: center;
   display: grid;
@@ -99,29 +113,47 @@
   color: white;
 }
 
-#hero-image {
-  overflow: hidden;
-}
-#hero-image img {
-  width: 800px;
+.scroll-me-tag {
+  font-size: 0.9em;
+  font-weight: 700;
   position: absolute;
-  z-index: -1;
-  opacity: 0.2;
+  bottom: 50px;
+  right: 40px;
 }
-#hero-image img:first-child {
-  left: 200px;
-  top: 100px;
-  transform: rotate(30deg);
+@media screen and (max-width: 600px) {
+  .scroll-me-tag {
+    bottom: 120px;
+    right: 50%;
+    transform: translateX(50%);
+  }
 }
-#hero-image img:nth-child(2) {
-  left: -200px;
-  top: 600px;
-  transform: rotate(-30deg);
+.scroll-me-tag div {
+  display: inline-block;
+  animation: bounce 2s infinite;
 }
-#hero-image img:nth-child(3) {
-  left: 200px;
-  top: 1100px;
-  transform: rotate(-30deg);
+.scroll-me-tag div:nth-child(1) {
+  animation-delay: 0.08s;
+}
+.scroll-me-tag div:nth-child(2) {
+  animation-delay: 0.16s;
+}
+.scroll-me-tag div:nth-child(3) {
+  animation-delay: 0.24s;
+}
+.scroll-me-tag div:nth-child(4) {
+  animation-delay: 0.32s;
+}
+.scroll-me-tag div:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.scroll-me-tag div:nth-child(6) {
+  animation-delay: 0.48s;
+}
+.scroll-me-tag div:nth-child(7) {
+  animation-delay: 0.56s;
+}
+.scroll-me-tag div:nth-child(8) {
+  animation-delay: 0.64s;
 }
 
 #about {
