--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,105 +1,97 @@
-@use './mixins' as *;
+@use "./mixins" as *;
 
-#about{
-    scroll-snap-align: center;
-    overflow: hidden;
-    min-height:calc(100% - 80px);
-    padding: 40px;
-    display: grid;
-    place-content: center;
+#about {
+  scroll-snap-align: center;
+  overflow: hidden;
+  min-height: calc(100% - 80px);
+  padding: 40px;
+  display: grid;
+  place-content: center;
 
-    article{
-        padding: 10px;
-        @media screen and (max-width:620px) {
-           padding: 0;
-          }
-        &:last-child{
+  article {
+    padding: 10px;
+    @media screen and (max-width: 620px) {
+      padding: 0;
+    }
+    &:last-child {
+      @media screen and (max-width: 820px) {
+        margin-top: 50px;
+      }
+      p {
+        padding: 0;
+        margin: 0;
+        font-size: 0.8em;
+        color: rgb(51, 51, 51);
 
-            @media screen and (max-width:820px) {
-                margin-top: 50px;
-               }
-            p{
-
-                padding: 0;
-                margin: 0;
-                font-size: 0.8em;
-                color:rgb(51, 51, 51);
-
-                      @media screen and (max-width:820px) {
+        @media screen and (max-width: 820px) {
           font-size: 0.7em;
         }
 
-                
-  
-
-        @media screen and (max-width:620px) {
-            text-align: center;
-          }
-          @media screen and (max-width:410px) {
-            font-size: 0.5em;
-          }
-
-                span{
-                    color:var(--main-accent);
-                    font-weight: 700;
-                }
-            }
+        @media screen and (max-width: 620px) {
+          text-align: center;
         }
 
-        &:first-child{
-            h1{
-                padding: 0;
-                margin: 0;
-                position: relative;
-                font-size: 1.3em;
-
-
-                  span{
-                    opacity: 0.2;
-                    position: absolute;
-                   left:0;
-                    top:30%;
-                    transform: translateY(-50%);
-
-                    &:last-child{
-                        opacity: 0.1;
-                        top:10%;
-                    }
-                  }
-            }
-            ul{
-                margin-top: 40px;
-                display: grid;
-                grid-template-columns: repeat(6,1fr);
-
-                @media screen and (max-width:820px) {
-                    grid-template-columns: repeat(3,1fr);
-                   }
-                   @media screen and (max-width:520px) {
-                    grid-template-columns: repeat(2,1fr);
-                   }
-                gap:15px;
-                padding: 0;
-                // padding-left: 15px;
-                list-style: none;
-                li{
-                    border-radius: 5px;
-                    color:rgb(92, 92, 92);
-                    box-shadow: 2px 2px 5px rgb(174, 174, 174);
-                    display: grid;
-                    place-content: center;
-                    font-size: 0.8em;
-                    padding: 20px 5px;
-                    // width: 80px;
-
-                    @media screen and (max-width:820px) {
-                        font-size: 0.7em;
-                      }
-                      @media screen and (max-width:620px) {
-                        font-size: 0.6em;
-                      }
-                }
-            }
+        span {
+          color: var(--main-accent);
+          font-weight: 700;
         }
+      }
     }
+
+    &:first-child {
+      h1 {
+        padding: 0;
+        margin: 0;
+        position: relative;
+        font-size: 1.3em;
+        text-align: center;
+
+        span {
+          opacity: 0.2;
+          position: absolute;
+          left: 0;
+          top: 30%;
+          transform: translateY(-50%);
+
+          &:last-child {
+            opacity: 0.1;
+            top: 10%;
+          }
+        }
+      }
+      ul {
+        margin-top: 45px;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+
+        @media screen and (max-width: 820px) {
+          grid-template-columns: repeat(3, 1fr);
+        }
+        @media screen and (max-width: 520px) {
+          grid-template-columns: repeat(2, 1fr);
+        }
+        gap: 15px;
+        padding: 0px;
+        list-style: none;
+        li {
+          border-radius: 5px;
+          color: var(--main-accent);
+          border-bottom: solid 1.5px var(--main-accent);
+          border-right: solid 1.5px var(--main-accent);
+          display: grid;
+          place-content: center;
+          font-size: 0.8em;
+          padding: 20px 5px;
+          // width: 80px;
+
+          @media screen and (max-width: 820px) {
+            font-size: 0.7em;
+          }
+          @media screen and (max-width: 620px) {
+            font-size: 0.6em;
+          }
+        }
+      }
+    }
+  }
 }
