--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -1,183 +1,164 @@
-@use './mixins' as *;
+@use "./mixins" as *;
 
-#projects{
-    // min-height: calc(100% - 80px);
-    scroll-snap-align: center;
-    padding: 40px;
+#projects {
+  min-height: calc(100% - 80px);
+  scroll-snap-align: center;
+  padding: 40px;
+  display: grid;
+  grid-template-rows: 1.5fr 6fr 1fr;
+  grid-gap: 20px;
+  @media screen and (max-width: 600px) {
+    padding: 20px;
+  }
+
+  h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 1.3em;
+    text-align: center;
+    position: relative;
+
+    span {
+      font-weight: 1000;
+      opacity: 0.2;
+      position: absolute;
+      left: 50%;
+      top: 25%;
+      transform: translate(-50%, -50%);
+
+      &:last-child {
+        opacity: 0.1;
+        top: 10%;
+      }
+    }
+  }
+
+  article {
     display: grid;
-    grid-template-rows: 1fr 8fr;
-    grid-gap:20px;
-    @media screen and (max-width:600px) {
-        padding: 20px;
-    }
+    grid-template-columns: repeat(3, 1fr);
+    // grid-template-rows: 1fr 1fr;
 
-    h1{
-        margin:0;
-        padding: 0;
-        font-size: 1.3em;
-        text-align: center;
+    @media screen and (max-width: 800px) {
+      grid-template-columns: 1fr;
+    }
+    gap: 15px;
+
+    div {
+      min-height: 100px;
+      box-shadow: 2px 2px 5px rgb(177, 176, 176);
+      border-radius: 5px;
+      padding: 15px;
+      position: relative;
+      // border-radius: 10px;
+      overflow: hidden;
+      transition: all 0.4s;
+      cursor: pointer;
+
+      &:hover {
+        p {
+          opacity: 1;
+          transform: translateY(0px);
+        }
+
+        span {
+          transform: translateY(20px);
+          opacity: 0;
+        }
+
+        h1 {
+          color: var(--main-accent);
+        }
+
+        a {
+          opacity: 0.8;
+          transform: translateY(0px);
+        }
+      }
+
+      span {
+        width: 100%;
+        height: 100%;
+        // background:linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.5));
+        // backdrop-filter: blur(0.5px);
+        position: absolute;
+        left: 35px;
+        top: 35px;
+        transition: all 0.3s;
+
+        ul {
+          padding: 0;
+          font-weight: 400;
+          font-size: 0.8em;
+        }
+      }
+      h1 {
+        font-size: 1em;
+        text-align: left;
+        font-weight: 700;
+        color: black;
+        transition: color 0.3s;
+      }
+
+      p {
+        opacity: 0;
+        transform: translateY(-10px);
+        z-index: 20;
         position: relative;
+        font-size: 0.7em;
+        padding-bottom: 10px;
+        color: rgb(32, 32, 32);
+        transition: all 0.3s;
 
-        span{
-            font-weight: 1000;
-            opacity: 0.2;
-            position: absolute;
-            left:50%;
-            top:25%;
-            transform: translate(-50%,-50%);
-
-            &:last-child{
-                opacity: 0.1;
-                top:10%
-            }
+        @media screen and (max-width: 600px) {
+          font-size: 0.6em;
         }
-    }
+      }
 
-    article{
+      a {
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 0.7em;
+        position: absolute;
+        left: auto;
+        top: auto;
+        right: 10px;
+        bottom: 10px;
+        width: 22px;
+        aspect-ratio: 1/1;
         display: grid;
-        grid-template-columns: repeat(20,1fr);
-        // grid-template-rows: 1fr 1fr;
+        place-content: center;
+        background-color: transparent;
+        border: solid var(--main-accent) 1px;
+        color: var(--main-accent);
+        cursor: pointer;
+        opacity: 0;
+        transform: translateY(15px);
+        transition: all 0.3s;
 
-        @media screen and (max-width:800px) {
-            grid-template-columns: 1fr;
+        &:hover {
+          background-color: var(--main-accent);
+          color: white;
         }
-        gap:15px;
-
-
-        div{
-            min-height: 100px;
-            box-shadow: 2px 2px 5px rgb(177, 176, 176);
-            border-radius: 5px;
-            padding: 15px;
-            position: relative;
-            // border-radius: 10px;
-            overflow: hidden;
-            transition: all 0.4s;
-            cursor: pointer;
-
-            &:hover{
-                p{
-                    opacity: 1;
-                    transform: translateY(0px);
-                }
-
-                span{
-                    transform: translateY(20px);
-                    opacity: 0;
-                }
-
-                h1{
-                    color: var(--main-accent);
-                }
-
-                a{
-                    opacity:0.8;
-                    transform: translateY(0px);
-                }
-            }
-
-            span{
-                width: 100%;
-                height: 100%;
-                // background:linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.5));
-                // backdrop-filter: blur(0.5px);
-                position: absolute;
-                left:35px;
-                top:35px;
-                transition: all 0.3s;
-
-                ul{
-                    padding: 0;
-                    font-weight: 400;
-                    font-size: 0.8em;
-                    li{
-                        // color:var(--main-accent)
-                    }
-                }
-            }
-            h1{
-                font-size: 1em;
-                text-align: left;
-                font-weight: 700;
-                color:black;
-                transition: color 0.3s;
-            }
-
-            p{
-                opacity: 0;
-                transform: translateY(-10px);
-                z-index: 20;
-                position: relative;
-                font-size: 0.45em;
-                padding-bottom: 10px;
-                color:rgb(32, 32, 32);
-                transition: all 0.3s;
-
-                @media screen and (max-width:600px) {
-                    font-size: 0.4em;
-                }
-            }
-
-            &:nth-child(1){
-                @media screen and (min-width:800px) {
-                    grid-column: span 8;
-                }
-              
-            }
-            &:nth-child(2){
-                @media screen and (min-width:800px) {
-                    grid-column: span 7;
-                }
-                
-             }
-             &:nth-child(3){
-                @media screen and (min-width:800px){
-                    grid-column: span 5;
-                    grid-row:span 2;
-                }
-           
-             }
-             &:nth-child(4){
-                @media screen and (min-width:800px){
-                    grid-column: span 7;
-                }
-           
-             }
-             &:nth-child(5){
-                @media screen and (min-width:800px){
-                    grid-column: span 8;
-                }
-           
-             }
-
-             a{
-                text-decoration: none;
-                border-radius: 5px;
-                font-size: 0.7em;
-                position: absolute;
-                left:auto;
-                top:auto;
-                right:10px;
-                bottom: 10px;
-                width: 22px;
-                aspect-ratio: 1/1;
-                display: grid;
-                place-content: center;
-                background-color: transparent;
-                border: solid var(--main-accent) 1px;
-                color:var(--main-accent);
-                cursor: pointer;
-                opacity: 0;
-                transform: translateY(15px);
-                transition: all 0.3s;
-
-
-                &:hover{
-                    background-color: var(--main-accent);
-                    color:white;
-
-                }
-             }
-        }
+      }
     }
+  }
+
+  #project-footer {
+    h3 {
+      font-size: 0.8em;
+      text-align: center;
+
+      @media screen and (max-width: 600px) {
+        font-size: 0.7em;
+      }
+      a {
+        text-decoration: none;
+        color: var(--main-accent);
+
+        &:hover {
+          opacity: 0.8;
+        }
+      }
+    }
+  }
 }
