--- a/styles/style.css
+++ b/styles/style.css
@@ -19,17 +19,46 @@
   padding: 40px 60px;
   min-height: calc(100% - 80px);
   overflow: hidden;
+  position: relative;
 }
 
 #hero-greetings {
-  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   gap: 5px;
 }
-#hero-greetings h1 {
+#hero-greetings #hero-img {
+  height: 130%;
+  opacity: 0.4;
+  position: absolute;
+  bottom: -100px;
+  left: -50px;
+}
+@media screen and (max-width: 900px) {
+  #hero-greetings #hero-img {
+    height: 110%;
+  }
+}
+@media screen and (max-width: 600px) {
+  #hero-greetings #hero-img {
+    opacity: 0.15;
+  }
+}
+#hero-greetings #hero-container {
+  position: absolute;
+  right: 50px;
+  top: 130px;
+}
+@media screen and (max-width: 600px) {
+  #hero-greetings #hero-container {
+    right: 50%;
+    top: 50%;
+    transform: translate(50%, -50%);
+  }
+}
+#hero-greetings #hero-container h1 {
   margin: 0;
   padding: 0;
   font-size: 2.2em;
@@ -38,7 +67,7 @@
   text-align: center;
   position: relative;
 }
-#hero-greetings h1 span {
+#hero-greetings #hero-container h1 span {
   width: 100%;
   position: absolute;
   opacity: 0.2;
@@ -46,14 +75,14 @@
   transition: all 0.1s;
   transform: translate(-50%, -50%);
 }
-#hero-greetings h1 span:first-child {
+#hero-greetings #hero-container h1 span:first-child {
   top: 30%;
 }
-#hero-greetings h1 span:last-child {
+#hero-greetings #hero-container h1 span:last-child {
   opacity: 0.1;
   top: 10%;
 }
-#hero-greetings h3 {
+#hero-greetings #hero-container h3 {
   margin: 0;
   padding: 0;
   color: rgb(54, 54, 54);
@@ -62,8 +91,9 @@
   width: 100%;
 }
 @media screen and (max-width: 800px) {
-  #hero-greetings h3 {
+  #hero-greetings #hero-container h3 {
     font-size: 0.8em;
+    margin-top: 20px;
   }
 }
 #hero-greetings ul {
@@ -75,10 +105,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-top: 50px;
 }
 #hero-greetings ul li {
   color: var(--main-accent);
@@ -102,12 +129,6 @@
 #hero-greetings ul li a i {
   font-size: 0.8em;
 }
-@media screen and (max-width: 800px) {
-  #hero-greetings ul li {
-    width: 30px;
-    font-size: 0.8em;
-  }
-}
 #hero-greetings ul li:hover {
   background-color: var(--main-accent);
   color: white;
@@ -122,7 +143,6 @@
 }
 @media screen and (max-width: 600px) {
   .scroll-me-tag {
-    bottom: 120px;
     right: 50%;
     transform: translateX(50%);
   }
@@ -193,11 +213,6 @@
     text-align: center;
   }
 }
-@media screen and (max-width: 410px) {
-  #about article:last-child p {
-    font-size: 0.5em;
-  }
-}
 #about article:last-child p span {
   color: var(--main-accent);
   font-weight: 700;
@@ -207,6 +222,7 @@
   margin: 0;
   position: relative;
   font-size: 1.3em;
+  text-align: center;
 }
 #about article:first-child h1 span {
   opacity: 0.2;
@@ -220,11 +236,11 @@
   top: 10%;
 }
 #about article:first-child ul {
-  margin-top: 40px;
+  margin-top: 45px;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 15px;
-  padding: 0;
+  padding: 0px;
   list-style: none;
 }
 @media screen and (max-width: 820px) {
@@ -239,8 +255,9 @@
 }
 #about article:first-child ul li {
   border-radius: 5px;
-  color: rgb(92, 92, 92);
-  box-shadow: 2px 2px 5px rgb(174, 174, 174);
+  color: var(--main-accent);
+  border-bottom: solid 1.5px var(--main-accent);
+  border-right: solid 1.5px var(--main-accent);
   display: grid;
   place-content: center;
   font-size: 0.8em;
@@ -260,9 +277,21 @@
 #skills {
   scroll-snap-align: center;
   padding: 40px;
+  background-color: rgb(245, 245, 245);
+  min-height: calc(100% - 80px);
   display: grid;
-  grid-template-rows: 1fr 8fr;
+  grid-template-rows: 2fr 8fr;
   grid-gap: 20px;
+}
+@media screen and (max-width: 900px) {
+  #skills {
+    grid-template-rows: 1fr 8fr;
+  }
+}
+@media screen and (max-width: 450px) {
+  #skills {
+    grid-gap: 40px;
+  }
 }
 #skills h1 {
   margin: 0;
@@ -285,13 +314,13 @@
 #skills article {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   place-content: center;
 }
 @media screen and (max-width: 450px) {
   #skills article {
     grid-template-columns: 1fr;
-    gap: 20px;
+    gap: 5px;
   }
 }
 #skills article div {
@@ -358,10 +387,11 @@
 }
 
 #projects {
+  min-height: calc(100% - 80px);
   scroll-snap-align: center;
   padding: 40px;
   display: grid;
-  grid-template-rows: 1fr 8fr;
+  grid-template-rows: 1.5fr 6fr 1fr;
   grid-gap: 20px;
 }
 @media screen and (max-width: 600px) {
@@ -390,7 +420,7 @@
 }
 #projects article {
   display: grid;
-  grid-template-columns: repeat(20, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 15px;
 }
 @media screen and (max-width: 800px) {
@@ -448,40 +478,14 @@
   transform: translateY(-10px);
   z-index: 20;
   position: relative;
-  font-size: 0.45em;
+  font-size: 0.7em;
   padding-bottom: 10px;
   color: rgb(32, 32, 32);
   transition: all 0.3s;
 }
 @media screen and (max-width: 600px) {
   #projects article div p {
-    font-size: 0.4em;
-  }
-}
-@media screen and (min-width: 800px) {
-  #projects article div:nth-child(1) {
-    grid-column: span 8;
-  }
-}
-@media screen and (min-width: 800px) {
-  #projects article div:nth-child(2) {
-    grid-column: span 7;
-  }
-}
-@media screen and (min-width: 800px) {
-  #projects article div:nth-child(3) {
-    grid-column: span 5;
-    grid-row: span 2;
-  }
-}
-@media screen and (min-width: 800px) {
-  #projects article div:nth-child(4) {
-    grid-column: span 7;
-  }
-}
-@media screen and (min-width: 800px) {
-  #projects article div:nth-child(5) {
-    grid-column: span 8;
+    font-size: 0.6em;
   }
 }
 #projects article div a {
@@ -508,6 +512,22 @@
 #projects article div a:hover {
   background-color: var(--main-accent);
   color: white;
+}
+#projects #project-footer h3 {
+  font-size: 0.8em;
+  text-align: center;
+}
+@media screen and (max-width: 600px) {
+  #projects #project-footer h3 {
+    font-size: 0.7em;
+  }
+}
+#projects #project-footer h3 a {
+  text-decoration: none;
+  color: var(--main-accent);
+}
+#projects #project-footer h3 a:hover {
+  opacity: 0.8;
 }
 
 #footer {
@@ -586,10 +606,11 @@
 }
 
 :root {
-  --main-accent:rgb(141, 22, 135);
+  --main-accent: rgb(141, 22, 135);
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -631,10 +652,10 @@ header {
 #exit-website {
   visibility: hidden;
   z-index: 100;
-  top: 70px;
+  top: 20px;
   width: 80px;
   height: 35px;
-  border-radius: 500px;
+  border-radius: 10px;
   border: none;
   display: grid;
   place-content: center;
